--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.1
   get_storage: ^2.0.3
   equatable: ^2.0.3
+  flutter_easyloading: ^3.0.3
 
 dev_dependencies:
   flutter_test:
