--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_storage: ^2.0.3
   equatable: ^2.0.3
   flutter_easyloading: ^3.0.3
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
